# pineapple

./: .gitignore  Cargo.toml  README.md  build.sh  workspace.code-workspace  x86_64-spinix.json
.cargo/: config.toml
boot/src/: main.rs
efidisk/: boot-uefi-spinix.efi
images/: spinix-banner-hq.pdn  spinix-banner.pdn  spinix-concept.pdn
src/: gdt.rs  interrupts.rs  lib.rs  main.rs  memory.rs  serial.rs  vga_buffer.rs
src/drivers/: mod.rs
src/drivers/allocator/: fixed_size_block.rs
src/drivers/gpu/: arrays.rs  gop.rs  mod.rs
src/drivers/interrupts/: cpu.rs  gdt.rs  mod.rs
src/drivers/serial/: mod.rs  serial.rs  serialprint.rs
tests/: basic_boot.rs  should_panic.rs
