[package]
name = "spinix"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bootloader = { version = "0.10.6", path = "../bootloader" }
x86_64 = { git = "https://github.com/rust-osdev/x86_64.git" }
uart_16550 = "0.2.0"
spin = "0.5.2"
volatile = "0.2.6"
conquer-once = { version = "0.3.2", default-features = false }
pic8259 = "0.10.1"
pc-keyboard = "0.5.0"
linked_list_allocator = "0.9.0"

[workspace]
members = ["boot"]

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[package.metadata.bootloader]
map-physical-memory = true